objects/MilestoneForReporting__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Elapse_Time__c</fullName>
        <label>Actual Elapse Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response_Time__c</fullName>
        <label>First Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IMS_Rep_c__c</fullName>
        <label>IMS Rep</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestone_Name__c</fullName>
        <label>Milestone Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opened_Date__c</fullName>
        <label>Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <label>Parent Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Time__c</fullName>
        <label>Resolution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stopped_time__c</fullName>
        <label>Stopped time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_to_Complete_Task__c</fullName>
        <label>Time to Complete Task</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MilestoneForReporting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Actual_Elapse_Time__c</columns>
        <columns>Case_Origin__c</columns>
        <columns>Case_Owner__c</columns>
        <columns>Case_Record_Type__c</columns>
        <columns>Client_ID__c</columns>
        <columns>Closed_Date__c</columns>
        <columns>First_Response_Time__c</columns>
        <columns>IMS_Rep_c__c</columns>
        <columns>Milestone_Name__c</columns>
        <columns>Opened_Date__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>Status__c</columns>
        <columns>Stopped_time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>case number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MilestoneForReporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>